frontend/src/index.scss
/*body {*/
/*  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",*/
/*    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",*/
/*    sans-serif;*/
/*  -webkit-font-smoothing: antialiased;*/
/*  -moz-osx-font-smoothing: grayscale;*/
/*}*/

/*code {*/
/*  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",*/
/*    monospace;*/
/*}*/

$standardMargin: 10px;

.logo img {
  max-height: 40px !important;
}

.ReactVirtualized__Table__headerRow {
  text-transform: none !important;
}

.main {
  padding: 15px !important;
}

.modal-90w {
  max-width: none !important;
  width: 97%;
}

.centralSpinner {
  position: absolute;
  top: 50%;
  left: 50%;
}

.tableControlsRow {
  margin-bottom: $standardMargin;
}

.locked {
  background: #fffcc9 !important;
}

.unlocked {
  background: none !important;
}

.unsubmittedChange {
  background: #fffcc9 !important;
}

.cursorNotAllowed {
  cursor: not-allowed;
}

/* Prevent overlapping with the 🚫 icon */
.ag-tooltip {
  transform: translate(15px, -40px);
}

.costCenter-validation-error {
  color: #fa0400 !important;
}

.lds-ring {
  display: inline-block;
  position: relative;
  width: 20px;
  height: 20px;
  position: relative;
  top: 7px;
}
.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 15px;
  height: 15px;
  border: 2px solid #fff;
  border-radius: 50%;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: #666 transparent transparent transparent;
}
.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}
.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}
.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}
@keyframes lds-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.ag-center-cols-container {
  min-width: 100%;
}

.tooltip-styles {
  background-color: #f8f8f8;
  font-size: large;
  padding: 12px;
  border: 1px solid rgb(198, 197, 214);
  border-radius: 4px;
}

.ag-rich-select-list {
  height: auto !important;
}

.check-icon {
  margin-bottom: 5px;
}

.warning-icon:hover {
  background-color: rgba(0, 0, 0, 0.15);
}

.warning-icon {
  margin-bottom: 5px;
  padding: 2px;
  cursor: pointer;
  border-radius: 4px;
}

